--- a/P3/css/estilo.css
+++ b/P3/css/estilo.css
@@ -1,6 +1,5 @@
 	body { /* Fondo de la página web */
 		background-color: #CDCDCD;
-		margin: 0;
 	}
 
 	h1, strong { /* Los títulos 1 y textos en negrita */
@@ -8,17 +7,17 @@
 	}
 
 	div#contenedor { /* Contenedor que tiene la vista de la web*/
-		width: 100%;
-		margin: 0 auto;
+		width: 900px;
+		margin: auto;
 		border: 1px solid black;
 		background-color: #aaaaaa;
-		display: flex;
+		margin-top: 20px;
 	}
 
 	header { /* Encabezado de la página */
-		padding: 5% 3%;
-		height: 20%;
-		width: 100%;
+		padding: 30px;
+		height: 100px;
+		width: auto;
 		background-color: #110a2c;
 		color: white;
 		display: flex;
@@ -52,8 +51,8 @@
 		color: rgb(218, 155, 62);
 		padding: 10px;
 		float: left;
-		width: 20%; /* 170px; */
-		height: auto;
+		width: 150px; /* 170px; */
+		height: 400px;
 		background-color: #110a2c;
 	}
 
@@ -82,8 +81,8 @@
 	aside { /* Barra de lateral derecha */
 		padding: 10px;
 		float: right;
-		width: 20%; /* 170px; */
-		height: auto;
+		width: 150px; /* 170px; */
+		height: 400px;
 		background-color: #110a2c;
 	}
 
@@ -97,20 +96,19 @@
 	main { /* Contenido principal de la página actual */
 		color: black;
 		text-align: justify;
-		padding: 2%;
+		padding: 10px;
 		float: left;
 		/*min-height: 600px;
 		width: 500px;*/
-		/*max-height: 800px;*/
-		width: 60%;
-		display: flex;
+		max-height: 400px;
+		width: 540px;
 		background-color: white;
 		overflow: auto;
 	}
 	
 	footer { /* Pie de página */
 		clear: both;
-		padding: 5% 3%;
+		padding: 30px;
 		background-color: #110a2c;
 		color: white;
 		text-align: center;
