--- a/p3_g10/css/estilo.css
+++ b/p3_g10/css/estilo.css
@@ -21,6 +21,7 @@
 		background-color: blue;
 		grid-column: 1 / 4;
 		align-items: center;
+		overflow: scroll;
 	}
 
 	header img { /* Imagenes del encabezado */
