Clases para enlaces en lista de pelis

--- a/p3_g10/css/estilo.css
+++ b/p3_g10/css/estilo.css
@@ -103,6 +103,14 @@
 		overflow: scroll;
 	}
 
+	#resenyas {
+		color: slateblue;
+	}
+
+	#borrarPeli {
+		color : red;
+	}
+
 	main a:hover{
 		color: rgb(218, 155, 62);
 		font-weight: bold;
