--- a/p3_g10/css/estilo.css
+++ b/p3_g10/css/estilo.css
@@ -33,7 +33,7 @@
 		margin-right: 25px;
 	}
 
-	.logo-container {
+	.logo-container { /* Contenedor del logo */
 		flex: 0 0 auto; /* Ajusta el tamaño del contenedor del logo para que no crezca */
 	}
 
@@ -86,7 +86,7 @@
 		text-decoration: underline;
 	}
 
-	#imgSideIzq{
+	#imgSideIzq{ /* Imagen de la barra lateral izquierda */
 		width: 80%;
 		height: auto;
 	}
@@ -110,7 +110,7 @@
 		overflow: scroll;
 	}
 
-	main a:hover{
+	main a:hover{ /* Enlaces del contenido principal al pasar el cursor */
 		color: rgb(218, 155, 62);
 		font-weight: bold;
 		text-decoration: underline;
@@ -120,21 +120,21 @@
 		color: rgb(211, 223, 104);
 	}
 
-	#claquetaImg{
+	#claquetaImg{ /* Imagen de la página principal */
 		width: 100px;
 		height: auto;
 	}
 
-	#cineImg{
+	#cineImg{ /* Imagen de la página principal */
 		width: 100px;
 		height: auto;
 	}
 
-	#resenyas {
+	#resenyas { /* Reseñas de las películas */
 		color: slateblue;
 	}
 
-	.borrarPeli {
+	.borrarPeli { /* Botón de borrar película */
 		color : red;
 	}
 
@@ -144,7 +144,7 @@
 		text-align: right;
 	}
 
-	#instaImg, #facebookImg, #twiterImg{
+	#instaImg, #facebookImg, #twiterImg{ /* Imagenes de las redes sociales */
 		width: 50px;
 		height: 50px;
 	}
@@ -178,7 +178,7 @@
 		padding: 10px 15px;
 	}
 
-	@media all and (max-width: 640px) {
+	@media all and (max-width: 640px) { /* Cambios en la vista de la web para dispositivos móviles */
 		div#contenedor {
 			height : 100vh;
 			display : grid;
