--- a/proyecto_g10/css/estilo.css
+++ b/proyecto_g10/css/estilo.css
@@ -229,11 +229,12 @@ table, table td, table th{
 	border: 3px solid rgb(218, 155, 62);
 }
 
-@media (max-width: 640px) { /* Cambios en la vista de la web para dispositivos móviles */
+@media all and (max-width: 640px) { /* Cambios en la vista de la web para dispositivos móviles */
 	div#contenedor {
 		height : 100vh;
 		display : grid;
 		grid-template-rows: 20% 20% auto 10%;
+		grid-template-columns: 100%;
 	}
 	header{
 		grid-row: 1;
